[package]
name = "minipl"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
ariadne = "0.1.3"
camino = "1.0.7"
clap = { version = "3.0.13", features = ["derive"] }
derive_more = "0.99.17"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["time"] }

[features]
