[package]
name = "minipl"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.3"
camino = "1.0.7"
clap = { version = "3.0.13", features = ["derive"] }
miette = { version = "4.2.1", features = ["fancy"] }
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["time"] }

[features]
